tests/rest/rest.exp
Error ------------------------------------------------------------- type.js:10:2

Cannot cast `o1` to object type because property `x` is missing in object type
but exists in object type.


Error ------------------------------------------------------------- type.js:12:2

Cannot cast `o1` to object type because in property `x`, `X` is incompatible
with undefined.


Error ------------------------------------------------------------- type.js:13:2

Cannot cast `o1` to object type because property `y` is missing in object type
but exists in object type.


Error ------------------------------------------------------------- type.js:14:2

Cannot cast `o1` to object type because in property `x`, `X` is incompatible
with undefined.


Error ------------------------------------------------------------- type.js:14:2

Cannot cast `o1` to object type because property `y` is missing in object type
but exists in object type.


Error ------------------------------------------------------------- type.js:15:2

Cannot cast `o1` to object type because in property `x`, `X` is incompatible
with `Y`.


Error ------------------------------------------------------------- type.js:16:2

Cannot cast object literal to `O1` because inexact object literal is
incompatible with exact object type.


Error ------------------------------------------------------------- type.js:16:2

Cannot cast object literal to `O1` because property `x` is missing in object
literal but exists in object type.


Error ------------------------------------------------------------- type.js:18:2

Cannot cast object literal to `O1` because property `y` is missing in object
type but exists in object literal.


Error ------------------------------------------------------------- type.js:19:6

Cannot cast object literal to `O1` because in property `x`, `Y` is incompatible
with `X`.


Error ------------------------------------------------------------ type.js:21:28

Cannot instantiate `$Rest` because `Y` is incompatible with `X`.


Error ------------------------------------------------------------- type.js:27:2

Cannot cast `o3` to object type because property `x` is missing in object type
but exists in object type.


Error ------------------------------------------------------------- type.js:27:2

Cannot cast `o3` to object type because property `y` is missing in object type
but exists in object type.


Error ------------------------------------------------------------- type.js:28:2

Cannot cast `o3` to object type because in property `x`, undefined is
incompatible with `X`.


Error ------------------------------------------------------------- type.js:28:2

Cannot cast `o3` to object type because property `y` is missing in object type
but exists in object type.


Error ------------------------------------------------------------- type.js:29:2

Cannot cast `o3` to object type because property `y` is missing in object type
but exists in object type.


Error ------------------------------------------------------------- type.js:30:2

Cannot cast `o3` to object type because in property `x`, undefined is
incompatible with `X`.


Error ------------------------------------------------------------- type.js:32:2

Cannot cast `o3` to object type because in property `x`, `X` is incompatible
with `Y`.


Error ------------------------------------------------------------- type.js:32:2

Cannot cast `o3` to object type because in property `x`, undefined is
incompatible with `Y`.


Error ------------------------------------------------------------- type.js:32:2

Cannot cast `o3` to object type because property `y` is missing in object type
but exists in object type.


Error ------------------------------------------------------------- type.js:33:2

Cannot cast object literal to `O3` because inexact object literal is
incompatible with exact object type.


Error ------------------------------------------------------------- type.js:36:6

Cannot cast object literal to `O3` because in property `x`, `Y` is incompatible
with `X`.


Error ------------------------------------------------------------- type.js:40:2

Cannot cast `o4` to object type because property `x` is missing in object type
but exists in object type.


Error ------------------------------------------------------------- type.js:40:2

Cannot cast `o4` to object type because property `y` is missing in object type
but exists in object type.


Error ------------------------------------------------------------- type.js:41:2

Cannot cast `o4` to object type because property `y` is missing in object type
but exists in object type.


Error ------------------------------------------------------------- type.js:42:2

Cannot cast `o4` to object type because in property `x`, `X` is incompatible
with undefined.


Error ------------------------------------------------------------- type.js:42:2

Cannot cast `o4` to object type because property `y` is missing in object type
but exists in object type.


Error ------------------------------------------------------------- type.js:44:2

Cannot cast `o4` to object type because in property `x`, `X` is incompatible
with undefined.


Error ------------------------------------------------------------- type.js:45:2

Cannot cast `o4` to object type because in property `x`, `X` is incompatible
with `Y`.


Error ------------------------------------------------------------- type.js:45:2

Cannot cast `o4` to object type because property `y` is missing in object type
but exists in object type.


Error ------------------------------------------------------------- type.js:46:2

Cannot cast object literal to `O4` because inexact object literal is
incompatible with exact object type.


Error ------------------------------------------------------------- type.js:46:2

Cannot cast object literal to `O4` because property `x` is missing in object
literal but exists in object type.


Error ------------------------------------------------------------- type.js:49:6

Cannot cast object literal to `O4` because in property `x`, `Y` is incompatible
with `X`.


Error ------------------------------------------------------------- type.js:53:2

Cannot cast `o5` to object type because inexact object type is incompatible with
exact object type.


Error ------------------------------------------------------------- type.js:55:2

Cannot cast `o5` to object type because in property `x`, undefined is
incompatible with `X`.


Error ------------------------------------------------------------- type.js:57:2

Cannot cast `o5` to object type because in property `x`, undefined is
incompatible with `X`.


Error ------------------------------------------------------------- type.js:57:2

Cannot cast `o5` to object type because property `y` is missing in object type
but exists in object type.


Error ------------------------------------------------------------- type.js:58:2

Cannot cast `o5` to object type because property `y` is missing in object type
but exists in object type.


Error ------------------------------------------------------------- type.js:59:2

Cannot cast `o5` to object type because in property `x`, `X` is incompatible
with `Y`.


Error ------------------------------------------------------------- type.js:59:2

Cannot cast `o5` to object type because in property `x`, undefined is
incompatible with `Y`.


Error ------------------------------------------------------------- type.js:63:6

Cannot cast object literal to `O5` because in property `x`, `Y` is incompatible
with `X`.


Error ------------------------------------------------------------- type.js:67:2

Cannot cast `o6` to object type because inexact object type is incompatible with
exact object type.


Error ------------------------------------------------------------- type.js:69:2

Cannot cast `o6` to object type because in property `x`, undefined is
incompatible with `X`.


Error ------------------------------------------------------------- type.js:71:2

Cannot cast `o6` to object type because in property `x`, undefined is
incompatible with `X`.


Error ------------------------------------------------------------- type.js:73:2

Cannot cast `o6` to object type because in property `x`, `X` is incompatible
with `Y`.


Error ------------------------------------------------------------- type.js:73:2

Cannot cast `o6` to object type because in property `x`, undefined is
incompatible with `Y`.


Error ------------------------------------------------------------- type.js:77:6

Cannot cast object literal to `O6` because in property `x`, `Y` is incompatible
with `X`.


Error ------------------------------------------------------------- type.js:81:2

Cannot cast `o7` to object type because inexact object type is incompatible with
exact object type.


Error ------------------------------------------------------------- type.js:83:2

Cannot cast `o7` to object type because in property `x`, undefined is
incompatible with `X`.


Error ------------------------------------------------------------- type.js:85:2

Cannot cast `o7` to object type because in property `x`, undefined is
incompatible with `X`.


Error ------------------------------------------------------------- type.js:87:2

Cannot cast `o7` to object type because in property `x`, `X` is incompatible
with `Y`.


Error ------------------------------------------------------------- type.js:87:2

Cannot cast `o7` to object type because in property `x`, undefined is
incompatible with `Y`.


Error ------------------------------------------------------------- type.js:91:6

Cannot cast object literal to `O7` because in property `x`, `Y` is incompatible
with `X`.


Error ------------------------------------------------------------ type.js:93:27

Cannot instantiate `$Rest` because `Y` is incompatible with `X`.


Error ------------------------------------------------------------ type.js:97:28

Cannot instantiate `$Rest` because `Y` is incompatible with `X`.


Error ----------------------------------------------------------- type.js:101:29

Cannot instantiate `$Rest` because `Y` is incompatible with `X`.


Error ----------------------------------------------------------- type.js:105:30

Cannot instantiate `$Rest` because undefined is incompatible with `Y`.


Error ----------------------------------------------------------- type.js:109:18

Cannot instantiate `$Rest` because undefined property `y` is incompatible with
`Y`.


Error -------------------------------------------------------- type_dict.js:10:2

Cannot cast `o1` to object type because property `y` is missing in object type
but exists in object type.


Error -------------------------------------------------------- type_dict.js:11:2

Cannot cast `o1` to object type because in property `y`, undefined is
incompatible with `Y`.


Error -------------------------------------------------------- type_dict.js:13:2

Cannot cast `o1` to object type because in property `y`, `Y` is incompatible
with `X`.


Error -------------------------------------------------------- type_dict.js:14:2

Cannot cast object literal to `O1` because inexact object literal is
incompatible with exact object type.


Error -------------------------------------------------------- type_dict.js:16:6

Cannot cast object literal to `O1` because in property `y`, `X` is incompatible
with `Y`.


Error ------------------------------------------------------- type_dict.js:18:22

Cannot instantiate `$Rest` because `Y` is incompatible with `X`.


Error -------------------------------------------------------- type_dict.js:24:2

Cannot cast `o3` to object type because property `y` is missing in object type
but exists in object type.


Error -------------------------------------------------------- type_dict.js:25:2

Cannot cast `o3` to object type because in property `y`, undefined is
incompatible with `Y`.


Error -------------------------------------------------------- type_dict.js:27:2

Cannot cast `o3` to object type because in property `y`, `Y` is incompatible
with `X`.


Error -------------------------------------------------------- type_dict.js:28:2

Cannot cast object literal to `O3` because inexact object literal is
incompatible with exact object type.


Error -------------------------------------------------------- type_dict.js:30:6

Cannot cast object literal to `O3` because in property `y`, `X` is incompatible
with `Y`.


Error -------------------------------------------------------- type_dict.js:34:2

Cannot cast `o4` to object type because inexact object type is incompatible with
exact object type.


Error -------------------------------------------------------- type_dict.js:36:2

Cannot cast `o4` to object type because in property `y`, undefined is
incompatible with `Y`.


Error -------------------------------------------------------- type_dict.js:38:2

Cannot cast `o4` to object type because in property `y`, `Y` is incompatible
with `X`.


Error -------------------------------------------------------- type_dict.js:42:6

Cannot cast object literal to `O4` because in property `y`, `X` is incompatible
with `Y`.


Error -------------------------------------------------------- type_dict.js:46:2

Cannot cast `o5` to object type because inexact object type is incompatible with
exact object type.


Error -------------------------------------------------------- type_dict.js:48:2

Cannot cast `o5` to object type because in property `y`, undefined is
incompatible with `Y`.


Error -------------------------------------------------------- type_dict.js:50:2

Cannot cast `o5` to object type because in property `y`, `Y` is incompatible
with `X`.


Error -------------------------------------------------------- type_dict.js:54:6

Cannot cast object literal to `O5` because in property `y`, `X` is incompatible
with `Y`.


Error ------------------------------------------------------- type_dict.js:56:21

Cannot instantiate `$Rest` because `Y` is incompatible with `X`.


Error ------------------------------------------------------- type_dict.js:60:22

Cannot instantiate `$Rest` because `Y` is incompatible with `X`.


Error ------------------------------------------------------- type_dict.js:84:30

Cannot instantiate `$Rest` because `X` is incompatible with `Y`.


Error ------------------------------------------------------- type_dict.js:96:30

Cannot instantiate `$Rest` because `X` is incompatible with `Y`.


Error ------------------------------------------------------- type_dict.js:96:30

Cannot instantiate `$Rest` because undefined is incompatible with `Y`.


Error ----------------------------------------------------- type_generic.js:1:37

Cannot instantiate `$Rest` because `A` is incompatible with `B`.


Error ----------------------------------------------------- type_generic.js:2:10

Property `p` is missing in `A`.


Error ----------------------------------------------------- type_generic.js:2:13

`A` is not an object.


Error ------------------------------------------------------ type_generic.js:7:2

Cannot cast `o` to object type because in property `x`, undefined is
incompatible with string.


Error ------------------------------------------------------ type_generic.js:7:2

Cannot cast `o` to object type because property `p` is missing in object type
but exists in object literal.


Error: type_union.js:14
 14: ({x}: O1<X, Y>); // Error: x is not allowed
      ^^^ object literal. This type is incompatible with
 14: ({x}: O1<X, Y>); // Error: x is not allowed
           ^^^^^^^^ union: `O1`(s)
  Member 1:
   12: type O1<X, Y> = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void|}>;
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ O1
  Error:
   12: type O1<X, Y> = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void|}>;
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. This type is incompatible with
   14: ({x}: O1<X, Y>); // Error: x is not allowed
        ^^^ object literal
    Property `x` is incompatible:
       14: ({x}: O1<X, Y>); // Error: x is not allowed
            ^^^ property `x`. Property not found in
       12: type O1<X, Y> = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void|}>;
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Member 2:
   12: type O1<X, Y> = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void|}>;
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ O1
  Error:
   12: type O1<X, Y> = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void|}>;
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. This type is incompatible with
   14: ({x}: O1<X, Y>); // Error: x is not allowed
        ^^^ object literal
    Property `x` is incompatible:
       14: ({x}: O1<X, Y>); // Error: x is not allowed
            ^^^ property `x`. Property not found in
       12: type O1<X, Y> = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void|}>;
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type

Error: type_union.js:16
 16: ({x, y}: O1<X, Y>); // Error: x is not allowed
      ^^^^^^ object literal. This type is incompatible with
 16: ({x, y}: O1<X, Y>); // Error: x is not allowed
              ^^^^^^^^ union: `O1`(s)
  Member 1:
   12: type O1<X, Y> = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void|}>;
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ O1
  Error:
   12: type O1<X, Y> = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void|}>;
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. This type is incompatible with
   16: ({x, y}: O1<X, Y>); // Error: x is not allowed
        ^^^^^^ object literal
    Property `x` is incompatible:
       16: ({x, y}: O1<X, Y>); // Error: x is not allowed
            ^^^^^^ property `x`. Property not found in
       12: type O1<X, Y> = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void|}>;
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Member 2:
   12: type O1<X, Y> = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void|}>;
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ O1
  Error:
   12: type O1<X, Y> = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void|}>;
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. This type is incompatible with
   16: ({x, y}: O1<X, Y>); // Error: x is not allowed
        ^^^^^^ object literal
    Property `x` is incompatible:
       16: ({x, y}: O1<X, Y>); // Error: x is not allowed
            ^^^^^^ property `x`. Property not found in
       12: type O1<X, Y> = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void|}>;
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type

Error: type_union.js:21
 21: ({y}: O2<X, Y>); // Error: y is not allowed
      ^^^ object literal. This type is incompatible with
 21: ({y}: O2<X, Y>); // Error: y is not allowed
           ^^^^^^^^ union: `O2`(s)
  Member 1:
   18: type O2<X, Y> = $Rest<{|x: X|} | {|y: Y|}, {|y: Y | void|}>;
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ O2
  Error:
   18: type O2<X, Y> = $Rest<{|x: X|} | {|y: Y|}, {|y: Y | void|}>;
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. This type is incompatible with
   21: ({y}: O2<X, Y>); // Error: y is not allowed
        ^^^ object literal
    Property `y` is incompatible:
       21: ({y}: O2<X, Y>); // Error: y is not allowed
            ^^^ property `y`. Property not found in
       18: type O2<X, Y> = $Rest<{|x: X|} | {|y: Y|}, {|y: Y | void|}>;
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Member 2:
   18: type O2<X, Y> = $Rest<{|x: X|} | {|y: Y|}, {|y: Y | void|}>;
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ O2
  Error:
   18: type O2<X, Y> = $Rest<{|x: X|} | {|y: Y|}, {|y: Y | void|}>;
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. This type is incompatible with
   21: ({y}: O2<X, Y>); // Error: y is not allowed
        ^^^ object literal
    Property `y` is incompatible:
       21: ({y}: O2<X, Y>); // Error: y is not allowed
            ^^^ property `y`. Property not found in
       18: type O2<X, Y> = $Rest<{|x: X|} | {|y: Y|}, {|y: Y | void|}>;
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type

Error: type_union.js:22
 22: ({x, y}: O2<X, Y>); // Error: y is not allowed
      ^^^^^^ object literal. This type is incompatible with
 22: ({x, y}: O2<X, Y>); // Error: y is not allowed
              ^^^^^^^^ union: `O2`(s)
  Member 1:
   18: type O2<X, Y> = $Rest<{|x: X|} | {|y: Y|}, {|y: Y | void|}>;
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ O2
  Error:
   18: type O2<X, Y> = $Rest<{|x: X|} | {|y: Y|}, {|y: Y | void|}>;
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. This type is incompatible with
   22: ({x, y}: O2<X, Y>); // Error: y is not allowed
        ^^^^^^ object literal
    Property `y` is incompatible:
       22: ({x, y}: O2<X, Y>); // Error: y is not allowed
            ^^^^^^ property `y`. Property not found in
       18: type O2<X, Y> = $Rest<{|x: X|} | {|y: Y|}, {|y: Y | void|}>;
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Member 2:
   18: type O2<X, Y> = $Rest<{|x: X|} | {|y: Y|}, {|y: Y | void|}>;
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ O2
  Error:
   18: type O2<X, Y> = $Rest<{|x: X|} | {|y: Y|}, {|y: Y | void|}>;
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. This type is incompatible with
   22: ({x, y}: O2<X, Y>); // Error: y is not allowed
        ^^^^^^ object literal
    Property `x` is incompatible:
       22: ({x, y}: O2<X, Y>); // Error: y is not allowed
            ^^^^^^ property `x`. Property not found in
       18: type O2<X, Y> = $Rest<{|x: X|} | {|y: Y|}, {|y: Y | void|}>;
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type

Error: type_union.js:25
 25: (o: O3); // OK
      ^ object type. This type is incompatible with
 25: (o: O3); // OK
         ^^ union: `O3`(s)
  Member 1:
   24: type O3 = $Rest<{|x: X|} | {|y: Y|}, {|x: X, y: Y|}>; // Error: void ~> X and void ~> Y
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ O3
  Error:
   24: type O3 = $Rest<{|x: X|} | {|y: Y|}, {|x: X, y: Y|}>; // Error: void ~> X and void ~> Y
                       ^^^^^^^^ undefined property `y`. This type is incompatible with
   24: type O3 = $Rest<{|x: X|} | {|y: Y|}, {|x: X, y: Y|}>; // Error: void ~> X and void ~> Y
                                                       ^ Y
  Member 2:
   24: type O3 = $Rest<{|x: X|} | {|y: Y|}, {|x: X, y: Y|}>; // Error: void ~> X and void ~> Y
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ O3
  Error:
   24: type O3 = $Rest<{|x: X|} | {|y: Y|}, {|x: X, y: Y|}>; // Error: void ~> X and void ~> Y
                                  ^^^^^^^^ undefined property `x`. This type is incompatible with
   24: type O3 = $Rest<{|x: X|} | {|y: Y|}, {|x: X, y: Y|}>; // Error: void ~> X and void ~> Y
                                                 ^ X

Error: type_union.js:29
 29: ({x}: O4); // Error: x is not allowed
      ^^^ object literal. This type is incompatible with
 29: ({x}: O4); // Error: x is not allowed
           ^^ union: `O4`(s)
  Member 1:
   27: type O4 = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void, y: Y | void|}>;
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ O4
  Error:
   27: type O4 = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void, y: Y | void|}>;
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. This type is incompatible with
   29: ({x}: O4); // Error: x is not allowed
        ^^^ object literal
    Property `x` is incompatible:
       29: ({x}: O4); // Error: x is not allowed
            ^^^ property `x`. Property not found in
       27: type O4 = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void, y: Y | void|}>;
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Member 2:
   27: type O4 = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void, y: Y | void|}>;
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ O4
  Error:
   27: type O4 = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void, y: Y | void|}>;
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. This type is incompatible with
   29: ({x}: O4); // Error: x is not allowed
        ^^^ object literal
    Property `x` is incompatible:
       29: ({x}: O4); // Error: x is not allowed
            ^^^ property `x`. Property not found in
       27: type O4 = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void, y: Y | void|}>;
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type

Error: type_union.js:30
 30: ({y}: O4); // Error: y is not allowed
      ^^^ object literal. This type is incompatible with
 30: ({y}: O4); // Error: y is not allowed
           ^^ union: `O4`(s)
  Member 1:
   27: type O4 = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void, y: Y | void|}>;
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ O4
  Error:
   27: type O4 = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void, y: Y | void|}>;
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. This type is incompatible with
   30: ({y}: O4); // Error: y is not allowed
        ^^^ object literal
    Property `y` is incompatible:
       30: ({y}: O4); // Error: y is not allowed
            ^^^ property `y`. Property not found in
       27: type O4 = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void, y: Y | void|}>;
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Member 2:
   27: type O4 = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void, y: Y | void|}>;
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ O4
  Error:
   27: type O4 = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void, y: Y | void|}>;
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. This type is incompatible with
   30: ({y}: O4); // Error: y is not allowed
        ^^^ object literal
    Property `y` is incompatible:
       30: ({y}: O4); // Error: y is not allowed
            ^^^ property `y`. Property not found in
       27: type O4 = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void, y: Y | void|}>;
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type

Error: type_union.js:31
 31: ({x, y}: O4); // Error: x and y are not allowed
      ^^^^^^ object literal. This type is incompatible with
 31: ({x, y}: O4); // Error: x and y are not allowed
              ^^ union: `O4`(s)
  Member 1:
   27: type O4 = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void, y: Y | void|}>;
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ O4
  Error:
   27: type O4 = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void, y: Y | void|}>;
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. This type is incompatible with
   31: ({x, y}: O4); // Error: x and y are not allowed
        ^^^^^^ object literal
    Property `x` is incompatible:
       31: ({x, y}: O4); // Error: x and y are not allowed
            ^^^^^^ property `x`. Property not found in
       27: type O4 = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void, y: Y | void|}>;
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Member 2:
   27: type O4 = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void, y: Y | void|}>;
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ O4
  Error:
   27: type O4 = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void, y: Y | void|}>;
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type. This type is incompatible with
   31: ({x, y}: O4); // Error: x and y are not allowed
        ^^^^^^ object literal
    Property `x` is incompatible:
       31: ({x, y}: O4); // Error: x and y are not allowed
            ^^^^^^ property `x`. Property not found in
       27: type O4 = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void, y: Y | void|}>;
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type

Error: type_union.js:34
 34: (o: O5); // Error: missing x and missing y
      ^ object type. This type is incompatible with
 34: (o: O5); // Error: missing x and missing y
         ^^ union: object type(s)
  Member 1:
   33: type O5 = $Rest<{|x: X, y: Y|}, {|x: X|} | {|y: Y|}>;
                       ^^^^^^^^^^^^^^ object type
  Error:
   34: (o: O5); // Error: missing x and missing y
        ^ object type. This type is incompatible with
   33: type O5 = $Rest<{|x: X, y: Y|}, {|x: X|} | {|y: Y|}>;
                       ^^^^^^^^^^^^^^ object type
    Property `x` is incompatible:
       33: type O5 = $Rest<{|x: X, y: Y|}, {|x: X|} | {|y: Y|}>;
                           ^^^^^^^^^^^^^^ property `x`. Property not found in
       34: (o: O5); // Error: missing x and missing y
            ^ object type
  Member 2:
   33: type O5 = $Rest<{|x: X, y: Y|}, {|x: X|} | {|y: Y|}>;
                       ^^^^^^^^^^^^^^ object type
  Error:
   34: (o: O5); // Error: missing x and missing y
        ^ object type. This type is incompatible with
   33: type O5 = $Rest<{|x: X, y: Y|}, {|x: X|} | {|y: Y|}>;
                       ^^^^^^^^^^^^^^ object type
    Property `y` is incompatible:
       33: type O5 = $Rest<{|x: X, y: Y|}, {|x: X|} | {|y: Y|}>;
                           ^^^^^^^^^^^^^^ property `y`. Property not found in
       34: (o: O5); // Error: missing x and missing y
            ^ object type

Error: type_union.js:37
 37: ({x, y}: O5); // Error: x and y are not allowed together
      ^^^^^^ object literal. This type is incompatible with
 37: ({x, y}: O5); // Error: x and y are not allowed together
              ^^ union: object type(s)
  Member 1:
   33: type O5 = $Rest<{|x: X, y: Y|}, {|x: X|} | {|y: Y|}>;
                       ^^^^^^^^^^^^^^ object type
  Error:
   33: type O5 = $Rest<{|x: X, y: Y|}, {|x: X|} | {|y: Y|}>;
                       ^^^^^^^^^^^^^^ object type. This type is incompatible with
   37: ({x, y}: O5); // Error: x and y are not allowed together
        ^^^^^^ object literal
    Property `y` is incompatible:
       37: ({x, y}: O5); // Error: x and y are not allowed together
            ^^^^^^ property `y`. Property not found in
       33: type O5 = $Rest<{|x: X, y: Y|}, {|x: X|} | {|y: Y|}>;
                           ^^^^^^^^^^^^^^ object type
  Member 2:
   33: type O5 = $Rest<{|x: X, y: Y|}, {|x: X|} | {|y: Y|}>;
                       ^^^^^^^^^^^^^^ object type
  Error:
   33: type O5 = $Rest<{|x: X, y: Y|}, {|x: X|} | {|y: Y|}>;
                       ^^^^^^^^^^^^^^ object type. This type is incompatible with
   37: ({x, y}: O5); // Error: x and y are not allowed together
        ^^^^^^ object literal
    Property `x` is incompatible:
       37: ({x, y}: O5); // Error: x and y are not allowed together
            ^^^^^^ property `x`. Property not found in
       33: type O5 = $Rest<{|x: X, y: Y|}, {|x: X|} | {|y: Y|}>;
                           ^^^^^^^^^^^^^^ object type

Error ------------------------------------------------------ type_union.js:39:17

Cannot instantiate `$Rest` because undefined property `y` is incompatible with
`Y`.


Error: type_union.js:44
 44: ({x}: O7); // Error: x is not allowed
      ^^^ object literal. This type is incompatible with
 44: ({x}: O7); // Error: x is not allowed
           ^^ union: object type(s)
  Member 1:
   42: type O7 = $Rest<{|y: Y|}, {|x: X | void|} | {|y: Y|}>;
                       ^^^^^^^^ object type
  Error:
   42: type O7 = $Rest<{|y: Y|}, {|x: X | void|} | {|y: Y|}>;
                       ^^^^^^^^ object type. This type is incompatible with
   44: ({x}: O7); // Error: x is not allowed
        ^^^ object literal
    Property `x` is incompatible:
       44: ({x}: O7); // Error: x is not allowed
            ^^^ property `x`. Property not found in
       42: type O7 = $Rest<{|y: Y|}, {|x: X | void|} | {|y: Y|}>;
                           ^^^^^^^^ object type
  Member 2:
   42: type O7 = $Rest<{|y: Y|}, {|x: X | void|} | {|y: Y|}>;
                       ^^^^^^^^ object type
  Error:
   42: type O7 = $Rest<{|y: Y|}, {|x: X | void|} | {|y: Y|}>;
                       ^^^^^^^^ object type. This type is incompatible with
   44: ({x}: O7); // Error: x is not allowed
        ^^^ object literal
    Property `x` is incompatible:
       44: ({x}: O7); // Error: x is not allowed
            ^^^ property `x`. Property not found in
       42: type O7 = $Rest<{|y: Y|}, {|x: X | void|} | {|y: Y|}>;
                           ^^^^^^^^ object type

Error: type_union.js:46
 46: ({x, y}: O7); // Error: x is not allowed
      ^^^^^^ object literal. This type is incompatible with
 46: ({x, y}: O7); // Error: x is not allowed
              ^^ union: object type(s)
  Member 1:
   42: type O7 = $Rest<{|y: Y|}, {|x: X | void|} | {|y: Y|}>;
                       ^^^^^^^^ object type
  Error:
   42: type O7 = $Rest<{|y: Y|}, {|x: X | void|} | {|y: Y|}>;
                       ^^^^^^^^ object type. This type is incompatible with
   46: ({x, y}: O7); // Error: x is not allowed
        ^^^^^^ object literal
    Property `x` is incompatible:
       46: ({x, y}: O7); // Error: x is not allowed
            ^^^^^^ property `x`. Property not found in
       42: type O7 = $Rest<{|y: Y|}, {|x: X | void|} | {|y: Y|}>;
                           ^^^^^^^^ object type
  Member 2:
   42: type O7 = $Rest<{|y: Y|}, {|x: X | void|} | {|y: Y|}>;
                       ^^^^^^^^ object type
  Error:
   42: type O7 = $Rest<{|y: Y|}, {|x: X | void|} | {|y: Y|}>;
                       ^^^^^^^^ object type. This type is incompatible with
   46: ({x, y}: O7); // Error: x is not allowed
        ^^^^^^ object literal
    Property `x` is incompatible:
       46: ({x, y}: O7); // Error: x is not allowed
            ^^^^^^ property `x`. Property not found in
       42: type O7 = $Rest<{|y: Y|}, {|x: X | void|} | {|y: Y|}>;
                           ^^^^^^^^ object type

Error: type_union.js:49
 49: (o: O8); // OK
      ^ object type. This type is incompatible with
 49: (o: O8); // OK
         ^^ union: `O8`(s)
  Member 1:
   48: type O8 = $Rest<{|x: X|} | {|y: Y|}, {|x: X|} | {|y: Y|}>; // Error: void ~> X and void ~> Y
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ O8
  Error:
   48: type O8 = $Rest<{|x: X|} | {|y: Y|}, {|x: X|} | {|y: Y|}>; // Error: void ~> X and void ~> Y
                       ^^^^^^^^ undefined property `y`. This type is incompatible with
   48: type O8 = $Rest<{|x: X|} | {|y: Y|}, {|x: X|} | {|y: Y|}>; // Error: void ~> X and void ~> Y
                                                            ^ Y
  Member 2:
   48: type O8 = $Rest<{|x: X|} | {|y: Y|}, {|x: X|} | {|y: Y|}>; // Error: void ~> X and void ~> Y
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ O8
  Error:
   48: type O8 = $Rest<{|x: X|} | {|y: Y|}, {|x: X|} | {|y: Y|}>; // Error: void ~> X and void ~> Y
                                  ^^^^^^^^ undefined property `x`. This type is incompatible with
   48: type O8 = $Rest<{|x: X|} | {|y: Y|}, {|x: X|} | {|y: Y|}>; // Error: void ~> X and void ~> Y
                                                 ^ X

Error: type_union.js:55
 55: ({x, y}: O9); // Error: x and y are not allowed together
      ^^^^^^ object literal. This type is incompatible with
 55: ({x, y}: O9); // Error: x and y are not allowed together
              ^^ union: `O9`(s)
  Member 1:
   51: type O9 = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void|} | {|y: Y | void|}>;
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ O9
  Error:
   55: ({x, y}: O9); // Error: x and y are not allowed together
        ^^^^^^ object literal. This type is incompatible with
   51: type O9 = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void|} | {|y: Y | void|}>;
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ union: object type(s)
    Member 1:
     51: type O9 = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void|} | {|y: Y | void|}>;
                         ^^^^^^^^ object type
    Error:
     51: type O9 = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void|} | {|y: Y | void|}>;
                         ^^^^^^^^ object type. This type is incompatible with
     55: ({x, y}: O9); // Error: x and y are not allowed together
          ^^^^^^ object literal
      Property `y` is incompatible:
         55: ({x, y}: O9); // Error: x and y are not allowed together
              ^^^^^^ property `y`. Property not found in
         51: type O9 = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void|} | {|y: Y | void|}>;
                             ^^^^^^^^ object type
    Member 2:
     51: type O9 = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void|} | {|y: Y | void|}>;
                         ^^^^^^^^ object type
    Error:
     51: type O9 = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void|} | {|y: Y | void|}>;
                         ^^^^^^^^ object type. This type is incompatible with
     55: ({x, y}: O9); // Error: x and y are not allowed together
          ^^^^^^ object literal
      Property `x` is incompatible:
         55: ({x, y}: O9); // Error: x and y are not allowed together
              ^^^^^^ property `x`. Property not found in
         51: type O9 = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void|} | {|y: Y | void|}>;
                             ^^^^^^^^ object type
  Member 2:
   51: type O9 = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void|} | {|y: Y | void|}>;
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ O9
  Error:
   55: ({x, y}: O9); // Error: x and y are not allowed together
        ^^^^^^ object literal. This type is incompatible with
   51: type O9 = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void|} | {|y: Y | void|}>;
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ union: object type(s)
    Member 1:
     51: type O9 = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void|} | {|y: Y | void|}>;
                                    ^^^^^^^^ object type
    Error:
     51: type O9 = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void|} | {|y: Y | void|}>;
                                    ^^^^^^^^ object type. This type is incompatible with
     55: ({x, y}: O9); // Error: x and y are not allowed together
          ^^^^^^ object literal
      Property `x` is incompatible:
         55: ({x, y}: O9); // Error: x and y are not allowed together
              ^^^^^^ property `x`. Property not found in
         51: type O9 = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void|} | {|y: Y | void|}>;
                                        ^^^^^^^^ object type
    Member 2:
     51: type O9 = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void|} | {|y: Y | void|}>;
                                    ^^^^^^^^ object type
    Error:
     51: type O9 = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void|} | {|y: Y | void|}>;
                                    ^^^^^^^^ object type. This type is incompatible with
     55: ({x, y}: O9); // Error: x and y are not allowed together
          ^^^^^^ object literal
      Property `x` is incompatible:
         55: ({x, y}: O9); // Error: x and y are not allowed together
              ^^^^^^ property `x`. Property not found in
         51: type O9 = $Rest<{|x: X|} | {|y: Y|}, {|x: X | void|} | {|y: Y | void|}>;
                                        ^^^^^^^^ object type


Found 102 errors
